HEAD
    + Replace slim with lxdm
    + Fixed .config dir permissions
    + Install apcid by default
2.0-2
    + Add PPA in the first stage to install latest versions
    + Import PPA key to avoid warning executing apt-get update
    + Added PDF viewer
    + One single build run now generates both i386 and amd64
    + No longer duplicate preseed entries for auto and expert
2.0-1
    + 64bit support
    + Rebranded bookmarks icons
2.0
    + Fixed RAID problems
    + Disabled auto login after the install
    + Disabled screensaver
2.0-rc2
    + Nicer 16 colors plymouth boot logo
    + Logout screen rebrand
    + Poweroff and restart now work
2.0-rc1
    + Zentyal rebrand
    + Fixed desktop icons
    + Include ubuntu-standard packages again
    + Replaced blackbox by lxde
    + Include the nano text editor by default
1.5
    + All base packages including libebox are installed on first stage
    + Recommends are no longer installed
    + Added ebox-ftp
    + Changed display manager from gdm to slim
1.4-2
    + More error checks in preconfiguration stage
1.4-1
    + X11 UI tweaks (thanks to Kamilion)
    + Added console-cyrillic package
    + Install l7-protocols if trafficshaping is selected in advanced mode
    + Quote passwords to avoid problems with strange characters
    + Do not allow to enter 'root' or any other existing system user
      as admin user to avoid conflicts
1.4
    + Included blackbox and firefox to show the eBox UI after the install
    + Added firefox bookmarks to eBox webpages
    + Included ebackup in the advanced package selection
    + Optimized code to improve speed
    + Ask for administration username forbidding the 'ebox' username
    + Preseeds system user and proxy conf, asks for password on ebox-installer
    + Install remoteservices by default
1.3.15
    + Improved messages on external interfaces selection
    + Added warning when gateway is selected with less than 2 interfaces
    + Added auto-partitioning mode