@@ -1,3 +1,5 @@
 #!/bin/sh
 
+initctl emit zentyal-lxdm
+
 exit 0
