@@ -19,6 +19,13 @@ fi
 cp $DATA_DIR/ubuntu-ebox.seed $CD_BUILD_DIR/preseed/ubuntu-server-auto.seed
 cat $DATA_DIR/ubuntu-ebox-auto.seed >> $CD_BUILD_DIR/preseed/ubuntu-server-auto.seed
 
+DISASTER_PACKAGES="ebox-ebackup ebox-remoteservices zenity"
+cp $CD_BUILD_DIR/preseed/ubuntu-server.seed $CD_BUILD_DIR/preseed/disaster-recovery.seed
+sed -i 's/INSTALL_MODE/RECOVER_MODE/' $CD_BUILD_DIR/preseed/disaster-recovery.seed
+sed -i "s/include string/include string $DISASTER_PACKAGES/" $CD_BUILD_DIR/preseed/disaster-recovery.seed
+cp $CD_BUILD_DIR/preseed/disaster-recovery.seed $CD_BUILD_DIR/preseed/disaster-recovery-auto.seed
+cat $DATA_DIR/ubuntu-ebox-auto.seed >> $CD_BUILD_DIR/preseed/disaster-recovery-auto.seed
+
 sed -e s:VERSION:$EBOX_VERSION$EBOX_APPEND: < $DATA_DIR/isolinux-ebox.cfg.template > $CD_BUILD_DIR/isolinux/isolinux.cfg
 
 test -d $CD_EBOX_DIR || mkdir -p $CD_EBOX_DIR
